--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <p>
         Aur ek baat yaad rakhna, I will always love you. Tera ek reserve space hamesha mere dil mein rahega… because you are the "One I know by Heart”. Thank you, princess, for fixing me a lot..... ❤️❤️❤️
       </p>
-      <div class="signature">– Yours Always</div>
+      <div class="signature">– Yours</div>
     </div>
 
     <a class="btn" href="#">Forgive Me ❤️</a>
